[package]
name = "divine-drop-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
async-tungstenite = "0.16"
rand = "0.8"
sha1 = "0.10"
base64 = "0.12"
rust-crypto = "0.2"
